# eviz-dev

./: .gitignore  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.rst  README.rst  autoviz.py  environment.yaml  eviz_data_source_design.md  integ.sh  metadump.py  pyproject.toml  pytest.ini
.github/workflows/: build-and-test.yml
config/: README  meta_attributes.yaml  meta_coordinates.yaml  reference_rcParams.txt  runtime_config.yaml  sample_app.yaml  sample_specs.yaml  species_database.yaml
config/airnow/: airnow.yaml  airnow_specs.yaml
config/ccm/: ccm.yaml  ccm_cf_compare.yaml  ccm_cf_compare_specs.yaml  ccm_compare.yaml  ccm_compare_2x2.yaml  ccm_compare_2x2_specs.yaml  ccm_compare_3x1.yaml  ccm_compare_3x1_specs.yaml  ccm_compare_overlay.yaml  ccm_compare_overlay_specs.yaml  ccm_compare_specs.yaml  ccm_multiple.yaml  ccm_multiple_specs.yaml  ccm_new.yaml  ccm_omi.yaml  ccm_omi_compare.yaml  ccm_omi_compare_specs.yaml  ccm_omi_specs.yaml  ccm_specs.yaml
config/cf/: cf.yaml  cf_specs.yaml
config/crest/: crest.yaml  crest_box.yaml  crest_box_specs.yaml  crest_corr.yaml  crest_corr_specs.yaml  crest_pearson.yaml  crest_pearson_specs.yaml  crest_specs.yaml  crest_zarr.yaml  crest_zarr_gif.yaml  crest_zarr_gif_specs.yaml  crest_zarr_specs.yaml  crest_zarr_ts.yaml  crest_zarr_ts_specs.yaml  vizzy.yaml  vizzy_specs.yaml
config/generic/: generic.yaml  generic_specs.yaml
config/geos/: geos.yaml  geos_specs.yaml  geos_xt_compare.yaml  geos_xt_compare_specs.yaml
config/graph/: graph.yaml
config/grib/: grib.yaml  grib_specs.yaml
config/gridded/: gridded.yaml  gridded_altair.yaml  gridded_hvplot.yaml  gridded_hvplot_specs.yaml  gridded_multiple.yaml  gridded_multiple_specs.yaml  gridded_opendap.yaml  gridded_opendap_specs.yaml  gridded_specs.yaml
config/landsat/: landsat.yaml  landsat_specs.yaml
config/lis/: lis.yaml  lis_compare.yaml  lis_compare_specs.yaml  lis_gif.yaml  lis_gif_specs.yaml  lis_specs.yaml  lis_xt.yaml  lis_xt_compare.yaml  lis_xt_compare_specs.yaml  lis_xt_specs.yaml
config/mopitt/: mopitt.yaml  mopitt_specs.yaml
docs/: conf.py  index.rst  uml.txt
eviz/: __init__.py  from_kia.py
examples/: data_source_example.py  delegation_example.py  eviz.ccm_example.ipynb  run_gridded_example.ipynb  run_gridded_example.md
sviz/: sviz.py
test/: conftest.py  test_eviz_cli.sh
tests/: README.md  app_checks.py  app_checks.sh  conftest.py  test_metadump.py  test_sviz_autoviz.py
(+272 files in other folders)
